<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.Gravity"/>
        <import type="android.view.View"/>
        <import type="com.vitor.myapplication.util.ServiceHelper"/>

        <variable
            name="viewModel"
            type="com.vitor.myapplication.viewmodel.ServiceCharactersViewModel" />
        <variable
            name="searchEditTextFocused"
            type="java.lang.Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/content_description_marvel_logo"
                    app:srcCompat="@drawable/ic_marvel_logo" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_search_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:background="@null"
                android:gravity="@{searchEditTextFocused ? Gravity.START : Gravity.CENTER}"
                android:hint="@{searchEditTextFocused ? `` : @string/characters_service_search_hint}"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/iv_search_icon"
                app:layout_constraintStart_toEndOf="@+id/iv_search_back_icon"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:visibility="@{searchEditTextFocused ? View.INVISIBLE : View.VISIBLE}"
                android:contentDescription="@string/content_description_search_icon"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:srcCompat="@drawable/ic_search" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_search_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:visibility="@{searchEditTextFocused ? View.VISIBLE : View.INVISIBLE}"
                android:contentDescription="@string/content_description_close_search_icon"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:srcCompat="@drawable/ic_arrow_left" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_characters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="70dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:spanCount="2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/content_description_not_found_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_characters"
                app:srcCompat="@drawable/ic_empty" />

            <TextView
                android:id="@+id/textView9"
                style="@style/TextViewWarningStyle"
                android:text="@string/characters_service_not_found"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.charactersLiveData().empty ? View.VISIBLE : View.GONE, default=gone}"
                app:constraint_referenced_ids="imageView2, textView9" />

            <include
                android:id="@+id/view_no_connection"
                layout="@layout/view_not_connected"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{ServiceHelper.INSTANCE.notConnected ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/view_service_error"
                layout="@layout/view_service_error_general"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{ServiceHelper.INSTANCE.generalError ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
