<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.vitor.myapplication.viewmodel.FavoriteCharactersViewModel"/>

        <variable
            name="favoritesViewModel"
            type="com.vitor.myapplication.viewmodel.FavoriteCharactersViewModel" />
        <variable
            name="character"
            type="com.vitor.myapplication.model.Character" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ebony">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:contentDescription="@string/content_description_close_details_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_down" />

        <CheckBox
            android:id="@+id/cb_details_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/cb_character_details_favorite_selector"
            android:button="@null"
            android:contentDescription="@string/content_description_favorite_checkbox"
            android:checked="@{FavoriteCharactersViewModel.staticFavorites.contains(character), default=false}"
            android:onCheckedChanged="@{(_, checked) -> favoritesViewModel.onFavoriteChecked(checked, character)}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/iv_character_picture"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitXY"
            android:contentDescription="@{@string/content_description_character_picture(character.name)}"
            app:characterPicture="@{character.thumbnail.path + `.` + character.thumbnail.extension}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@{character.name}"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_character_picture"
            app:layout_constraintTop_toTopOf="@+id/iv_character_picture" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/character_details_participations_number"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_character_picture"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextViewCharacterDetailsParticipationsStyle"
            android:text="@{@string/character_details_participations_comics(character.comics.available)}"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_character_picture"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextViewCharacterDetailsParticipationsStyle"
            android:text="@{@string/character_details_participations_series(character.series.available)}"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_character_picture"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextViewCharacterDetailsParticipationsStyle"
            android:text="@{@string/character_details_participations_stories(character.stories.available)}"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_character_picture"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextViewCharacterDetailsParticipationsStyle"
            android:text="@{@string/character_details_participations_events(character.events.available)}"
            app:layout_constraintBottom_toBottomOf="@id/iv_character_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_character_picture"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@{character.description}"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_character_picture" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>